started gameStep functionality